add static key for API
